<resources>
    <string name="app_name">SatelliteHack</string>

    <string name="m_accuracy">(M)Accuracy</string>
    <string name="a_accuracy">(A)Accuracy</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="unreliable">Unreliable</string>
    <string name="undefined">Undefined</string>
    <string name="satelliteList">Satellites</string>
    <string name="refresh">Refresh</string>
    <string name="sat_cell">%1$s: %2$d</string>
    <string name="azimuth">Azimuth</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="inclination">Inclination</string>
    <string name="g_accuracy">(G)Accuracy</string>
    <string name="sight_description">Sight is for aiming the satellites.</string>
    <string name="bulls_eye_description">The bull\'s eye tell if aiming satellites by turning red</string>
    <string name="_1">1</string>
    <string name="congratulation">Congratulation</string>
    <string name="time">You took %1$ds to hack.</string>
    <string name="good_luck">Good luck next time</string>
    <string name="play">Play</string>
    <string name="empty_view">Empty view for layout setting</string>
    <string name="loading">loading</string>
    <string name="loading_bg_description">Background of loading image</string>
    <string name="loading_description">Loading</string>
    <string name="noise_description">Transmission noise</string>
    <string name="disconnected_message">Disconnected with satellites</string>
    <string name="author_tag">By team dot 2017</string>
    <string name="sight_bg_description">Black background of area out of sight</string>
    <string name="d">d</string>
    <string name="t">t</string>
</resources>
