<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_satellite_hack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dot.satellitehack.SatelliteHackActivity">

    <SurfaceView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/game_content">

        <ImageView
            android:id="@+id/sight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sight"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/sight_description"/>

        <TextView
            android:id = "@+id/satellite_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="36sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

            <ImageView
                android:id="@+id/bulls_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/bullseye"
                android:layout_weight="0.2"
                android:onClick="hack"
                android:clickable="false"
                android:contentDescription="@string/bulls_eye_description" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />
        </LinearLayout>

        <!--ImageView
            android:id="@+id/bulls_eye"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="hack"
            android:clickable="false"
            android:contentDescription="@string/bulls_eye_description"
            android:layout_weight="1" /-->

    </RelativeLayout>

    <!--pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        android:src="@drawable/dot_loading_gif"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" /-->

    <RelativeLayout
        android:id="@+id/failure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/noise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/noise_anim"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/fail_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            app:srcCompat="@drawable/disconnected" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/developerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azimuth" />

            <TextView
                android:id="@+id/converted_azimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inclination" />

            <TextView
                android:id="@+id/converted_inclination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_accuracy" />

            <TextView
                android:id="@+id/ga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satelliteList" />

        </TableRow>

    </TableLayout>


</RelativeLayout>
